--- a/LibAudioMgr/LibAudioMgr.vcxproj.filters
+++ b/LibAudioMgr/LibAudioMgr.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="PolicyConfig.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="AudioPolicyConfig.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
