feat: 增加窗口静音功能
增加设置窗口静音和获取窗口静音状态接口。

--- a/LibAudioMgr/LibAudioMgr.vcxproj
+++ b/LibAudioMgr/LibAudioMgr.vcxproj
@@ -79,6 +79,8 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
